Fixed alal project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,10 @@ cmake_minimum_required(VERSION 3.0)
 project(Parser)
 
 # Create a variable to store a list of all source files
-file(GLOB SOURCE_FILES "*.cpp" "App/*.cpp" "App/**/*.cpp" "App/**/**/*.cpp" "App/**/**/**/*.cpp")
+file(GLOB SOURCE_FILES "*.cpp" "App/*.cpp" "App/**/*.cpp" "App/**/**/*.cpp" "App/**/**/**/*.cpp" "App/**/**/**/**/*.cpp")
 
-# Add your source files to the executable
-add_executable(Parser ${SOURCE_FILES})
+set(GLOB HEADERS "*.hpp" "App/*.hpp" "App/**/*.hpp" "App/**/**/*.hpp" "App/**/**/**/*.hpp" "App/**/**/**/**/*.hpp")
 
-# Include directories
+add_executable(Parser ${SOURCE_FILES} ${HEADERS})
+
 target_include_directories(Parser PRIVATE include)
